k8s/CashierApp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cashierapp-deployment
  labels:
    app: cashierapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cashierapp
  template:
    metadata:
      labels:
        app: cashierapp
    spec:
      containers:
      - name: cashierapp
        image: freakydeveloper007/cashierapp:v2     
        ports:
        - containerPort: 8080
