k8s/CustomerFront-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customerfront-deployment
  labels:
    app: customerfront
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customerfront
  template:
    metadata:
      labels:
        app: customerfront
    spec:
      containers:
      - name: customerfront
        image: freakydeveloper007/customerfront:v1
        ports:
        - containerPort: 8080
