k8s/OfficeFrontEnd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: officefrontend-deployment
  labels:
    app: officefrontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: officefrontend
  template:
    metadata:
      labels:
        app: officefrontend
    spec:
      containers:
      - name: officefrontend
        image: freakydeveloper007/officefrontend:v1   
        ports:
        - containerPort: 8080
