k8s/OrderProcessing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderprocessing-deployment
  labels:
    app: orderprocessing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderprocessing
  template:
    metadata:
      labels:
        app: orderprocessing
    spec:
      containers:
      - name: orderprocessing
        image: freakydeveloper007/orderprocessing:v2
        ports:
        - containerPort: 8080
