k8s/PaymentProcessing-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentprocessing-deployment
  labels:
    app: paymentprocessing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentprocessing
  template:
    metadata:
      labels:
        app: paymentprocessing
    spec:
      containers:
      - name: opaymentprocessing
        image: freakydeveloper007/paymentprocessing:v1
        ports:
        - containerPort: 8080
