k8s/CashierApp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cashierapp-service
spec:
  selector:
    app: cashierapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
