k8s/CustomerFront-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customerfront-service
spec:
  selector:
    app: customerfront
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
