k8s/OfficeFrontEnd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: officefrontend-service
spec:
  selector:
    app: officefrontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
