k8s/OrderProcssing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orderprocessing-service
spec:
  selector:
    app: orderprocessing
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
