k8s/PaymentPorcessing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paymentprocessing-service
spec:
  selector:
    app: paymentprocessing
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
