k8s/OfficeFrontEnd-ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "officefrontend-ingress"
  namespace: "default"
spec:
  backend:
    serviceName: officefrontend-service
    servicePort: 80
