k8s/kong-ingress-rule.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: paymentprocesing-api
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: paymentprocessing-service
          servicePort: 8080
